Update new texts in translations files

--- a/src/i18n/translations/english/auth.json
+++ b/src/i18n/translations/english/auth.json
@@ -17,6 +17,7 @@
     "Don't have an account?": "Don't have an account?",
     "Register": "Register",
     "User Registered Successfully!": "User Registered Successfully!",
-    "Invalid error!": "Something went wrong. Please try again."
+    "Invalid error!": "Invalid error!",
+    "User Login Successful!":"User Login Successful!"
 }
   
