--- a/src/i18n/translations/telugu/auth.json
+++ b/src/i18n/translations/telugu/auth.json
@@ -17,6 +17,7 @@
     "Don't have an account?": "ఖాతా లేదా?",
     "Register": "రిజిస్టర్",
     "User Registered Successfully!": "వినియోగదారు విజయవంతంగా నమోదు అయ్యారు!",
-    "Invalid error!": "ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ప్రయత్నించండి."
+    "Invalid error!": "ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
+    "User Login Successful!":"వినియోగదారుడు లాగిన్ విజయవంతం!"
 }
   
