Modify alert messages

--- a/src/i18n/translations/english/auth.json
+++ b/src/i18n/translations/english/auth.json
@@ -16,8 +16,8 @@
     "Login": "Login",
     "Don't have an account?": "Don't have an account?",
     "Register": "Register",
-    "User Registered Successfully!": "User Registered Successfully!",
-    "Invalid error!": "Invalid error!",
-    "User Login Successful!":"User Login Successful!"
+    "You’ve successfully joined SmartChat!": "You’ve successfully joined SmartChat!",
+    "Something went wrong. Please try again": "Something went wrong. Please try again",
+    "You’ve successfully logged in to SmartChat!":"You’ve successfully logged in to SmartChat!"
 }
   
