--- a/src/i18n/translations/telugu/auth.json
+++ b/src/i18n/translations/telugu/auth.json
@@ -16,8 +16,9 @@
     "Login": "లాగిన్",
     "Don't have an account?": "ఖాతా లేదా?",
     "Register": "రిజిస్టర్",
-    "User Registered Successfully!": "వినియోగదారు విజయవంతంగా నమోదు అయ్యారు!",
-    "Invalid error!": "ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
-    "User Login Successful!":"వినియోగదారుడు లాగిన్ విజయవంతం!"
+    "You’ve successfully joined SmartChat!": "మీరు విజయవంతంగా స్మార్ట్‌చాట్ లో చేరారు!",
+    "Something went wrong. Please try again": "ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
+    "You’ve successfully logged in to SmartChat!": "మీరు విజయవంతంగా స్మార్ట్‌చాట్ లో లాగిన్ అయ్యారు!"
+
 }
   
