Add telugu translation for string literals in Home Screen

--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -7,5 +7,7 @@
     "Profile Photo": "ప్రొఫైల్ ఫోటో",
     "Camera": "కెమెరా",
     "Gallery": "గ్యాలరీ",
-    "Remove": "తొలగించు"
+    "Remove": "తొలగించు",
+    "SmartChat":"స్మార్ట్‌చాట్",
+    "Start Conversations with your closed ones":"మీ సన్నిహితులతో సంభాషణలు ప్రారంభించండి"
 }
