Add translations for the texts in contact screen for extensibility

--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -7,5 +7,8 @@
     "Profile Photo":"Profile Photo",
     "Camera":"Camera",
     "Gallery":"Gallery",
-    "Remove":"Remove"
+    "Remove":"Remove",
+    "Select contact":"Select contact",
+    "Contacts on SmartChat":"Contacts on SmartChat",
+    "Invite to SmartChat":"Invite to SmartChat"
 }
