Add translations for alert modal props for extensibility

--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -10,5 +10,12 @@
     "Remove":"Remove",
     "Select contact":"Select contact",
     "Contacts on SmartChat":"Contacts on SmartChat",
-    "Invite to SmartChat":"Invite to SmartChat"
+    "Invite to SmartChat":"Invite to SmartChat",
+    "Do you really want to delete this account?":"Do you really want to delete this account?",
+    "Delete":"Delete",
+    "Cancel":"Cancel",
+    "Do you really want to sign out":"Do you really want to sign out",
+    "Sign Out":"Sign Out",
+    "Do you really want to clear this chat?":"Do you really want to clear this chat?",
+    "Clear chat":"Clear chat"
 }
