--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -12,5 +12,12 @@
   "Start Conversations with your closed ones":"మీ సన్నిహితులతో సంభాషణలు ప్రారంభించండి",
   "Select contact": "ఫోన్ నెంబరు ఎంచుకోండి",
   "Contacts on SmartChat": "స్మార్ట్‌చాట్‌లో ఉన్న ఫ్రెండ్స్",
-  "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు పిలవండి"
+  "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు పిలవండి",
+  "Do you really want to delete this account?":"మీరు నిజంగా ఈ ఖాతాను తొలగించాలనుకుంటున్నారా?",
+  "Delete":"తొలగించు",
+  "Cancel":"తీసేయాండి",
+  "Do you really want to sign out?":"మీరు నిజంగా సైన్ అవుట్ చేయాలనుకుంటున్నారా?",
+  "Sign Out":"సైన్ అవుట్ చేయండి",
+  "Do you really want to clear this chat?":"మీరు నిజంగా ఈ చాట్‌ను క్లియర్ చేయాలనుకుంటున్నారా?",
+  "Clear chat":"చాట్‌ను క్లియర్ చేయండి"
 }
