Add translations for the string literals used in contact card

--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -10,5 +10,6 @@
     "Remove":"Remove",
     "Select contact":"Select contact",
     "Contacts on SmartChat":"Contacts on SmartChat",
-    "Invite to SmartChat":"Invite to SmartChat"
+    "Invite to SmartChat":"Invite to SmartChat",
+    "Invite":"Invite"
 }
