--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -8,9 +8,8 @@
   "Camera": "కెమెరా",
   "Gallery": "గ్యాలరీ",
   "Remove": "తొలగించు",
-  "SmartChat":"స్మార్ట్‌చాట్",
-  "Start Conversations with your closed ones":"మీ సన్నిహితులతో సంభాషణలు ప్రారంభించండి",
   "Select contact": "ఫోన్ నెంబరు ఎంచుకోండి",
   "Contacts on SmartChat": "స్మార్ట్‌చాట్‌లో ఉన్న ఫ్రెండ్స్",
-  "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు పిలవండి"
+  "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు ఆహ్వానించండి",
+   "Invite":"ఆహ్వానించు"
 }
