Add telugu and english translations for unread screen texts

--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -12,5 +12,7 @@
   "Start Conversations with your closed ones":"మీ సన్నిహితులతో సంభాషణలు ప్రారంభించండి",
   "Select contact": "ఫోన్ నెంబరు ఎంచుకోండి",
   "Contacts on SmartChat": "స్మార్ట్‌చాట్‌లో ఉన్న ఫ్రెండ్స్",
-  "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు పిలవండి"
+  "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు పిలవండి",
+  "No unread chats here":"ఇక్కడ చదవని చాట్‌లు లేవు",
+  "View all chats":"అన్ని చాట్‌లను వీక్షించండి"
 }
