--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -10,5 +10,7 @@
     "Remove":"Remove",
     "Select contact":"Select contact",
     "Contacts on SmartChat":"Contacts on SmartChat",
-    "Invite to SmartChat":"Invite to SmartChat"
+    "Invite to SmartChat":"Invite to SmartChat",
+    "No unread chats here":"No unread chats here",
+    "View all chats":"View all chats"
 }
