Add telugu and english translations for unread screen texts

--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -11,5 +11,7 @@
     "Select contact":"Select contact",
     "Contacts on SmartChat":"Contacts on SmartChat",
     "Invite to SmartChat":"Invite to SmartChat",
-    "Invite":"Invite"
+    "Invite":"Invite",
+    "No unread chats here":"No unread chats here",
+    "View all chats":"View all chats"
 }
