--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -11,5 +11,7 @@
   "Select contact": "ఫోన్ నెంబరు ఎంచుకోండి",
   "Contacts on SmartChat": "స్మార్ట్‌చాట్‌లో ఉన్న ఫ్రెండ్స్",
   "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు ఆహ్వానించండి",
-   "Invite":"ఆహ్వానించు"
+  "Invite":"ఆహ్వానించు",
+  "No unread chats here":"ఇక్కడ చదవని చాట్‌లు లేవు",
+  "View all chats":"అన్ని చాట్‌లను వీక్షించండి"
 }
