--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -20,5 +20,28 @@
     "Do you really want to sign out":"Do you really want to sign out",
     "Sign Out":"Sign Out",
     "Do you really want to clear this chat?":"Do you really want to clear this chat?",
-    "Clear chat":"Clear chat"
+    "Clear chat":"Clear chat",
+    "Today": "Today",
+    "Yesterday": "Yesterday",
+    "Jan": "Jan",
+    "Feb": "Feb",
+    "Mar": "Mar",
+    "Apr": "Apr",
+    "May": "May",
+    "Jun": "Jun",
+    "Jul": "Jul",
+    "Aug": "Aug",
+    "Sep": "Sep",
+    "Oct": "Oct",
+    "Nov": "Nov",
+    "Dec": "Dec",
+    "Monday": "Monday",
+    "Tuesday": "Tuesday",
+    "Wednesday": "Wednesday",
+    "Thursday": "Thursday",
+    "Friday": "Friday",
+    "Saturday": "Saturday",
+    "Sunday": "Sunday",
+    "AM": "AM",
+    "PM": "PM"
 }
