--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -20,5 +20,28 @@
   "Do you really want to sign out?":"మీరు నిజంగా సైన్ అవుట్ చేయాలనుకుంటున్నారా?",
   "Sign Out":"సైన్ అవుట్ చేయండి",
   "Do you really want to clear this chat?":"మీరు నిజంగా ఈ చాట్‌ను క్లియర్ చేయాలనుకుంటున్నారా?",
-  "Clear chat":"చాట్‌ను క్లియర్ చేయండి"
+  "Clear chat":"చాట్‌ను క్లియర్ చేయండి",
+  "Today": "ఈ రోజు",
+  "Yesterday": "నిన్న",
+  "Jan": "జనవరి",
+  "Feb": "ఫిబ్రవరి",
+  "Mar": "మార్చి",
+  "Apr": "ఏప్రిల్",
+  "May": "మే",
+  "Jun": "జూన్",
+  "Jul": "జూలై",
+  "Aug": "ఆగస్టు",
+  "Sep": "సెప్టెంబర్",
+  "Oct": "అక్టోబర్",
+  "Nov": "నవంబర్",
+  "Dec": "డిసెంబర్",
+  "Monday": "సోమవారం",
+  "Tuesday": "మంగళవారం",
+  "Wednesday": "బుధవారం",
+  "Thursday": "గురువారం",
+  "Friday": "శుక్రవారం",
+  "Saturday": "శనివారం",
+  "Sunday": "ఆదివారం",
+  "AM": "పూర్వాహ్నం",
+  "PM": "అపరాహ్నం"
 }
