Add telugu and english translations for block text of Chat Modal

--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -20,5 +20,6 @@
     "Do you really want to sign out":"Do you really want to sign out",
     "Sign Out":"Sign Out",
     "Do you really want to clear this chat?":"Do you really want to clear this chat?",
-    "Clear chat":"Clear chat"
+    "Clear chat":"Clear chat",
+    "Block":"Block"
 }
