--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -20,5 +20,6 @@
   "Do you really want to sign out?":"మీరు నిజంగా సైన్ అవుట్ చేయాలనుకుంటున్నారా?",
   "Sign Out":"సైన్ అవుట్ చేయండి",
   "Do you really want to clear this chat?":"మీరు నిజంగా ఈ చాట్‌ను క్లియర్ చేయాలనుకుంటున్నారా?",
-  "Clear chat":"చాట్‌ను క్లియర్ చేయండి"
+  "Clear chat":"చాట్‌ను క్లియర్ చేయండి",
+  "Block": "నిరోధించు"
 }
