Add translations for the string literals used in the application

--- a/src/i18n/translations/english/home.json
+++ b/src/i18n/translations/english/home.json
@@ -1,48 +1,77 @@
 {
-    "All Chats":"All Chats",
-    "Profile":"Profile",
-    "Unread":"Unread",
-    "You do not have permissions to select the picture":"You do not have permissions to select the picture",
-    "File should be JPG/PNG/JPEG format":"File should be JPG/PNG/JPEG format",
-    "Profile Photo":"Profile Photo",
-    "Camera":"Camera",
-    "Gallery":"Gallery",
-    "Remove":"Remove",
-    "Select contact":"Select contact",
-    "Contacts on SmartChat":"Contacts on SmartChat",
-    "Invite to SmartChat":"Invite to SmartChat",
-    "Invite":"Invite",
-    "No unread chats here":"No unread chats here",
-    "View all chats":"View all chats",
-    "Do you really want to delete this account?":"Do you really want to delete this account?",
-    "Delete":"Delete",
-    "Cancel":"Cancel",
-    "Do you really want to sign out":"Do you really want to sign out",
-    "Sign Out":"Sign Out",
-    "Do you really want to clear this chat?":"Do you really want to clear this chat?",
-    "Clear chat":"Clear chat",
-    "Today": "Today",
-    "Yesterday": "Yesterday",
-    "Jan": "Jan",
-    "Feb": "Feb",
-    "Mar": "Mar",
-    "Apr": "Apr",
-    "May": "May",
-    "Jun": "Jun",
-    "Jul": "Jul",
-    "Aug": "Aug",
-    "Sep": "Sep",
-    "Oct": "Oct",
-    "Nov": "Nov",
-    "Dec": "Dec",
-    "Monday": "Monday",
-    "Tuesday": "Tuesday",
-    "Wednesday": "Wednesday",
-    "Thursday": "Thursday",
-    "Friday": "Friday",
-    "Saturday": "Saturday",
-    "Sunday": "Sunday",
-    "AM": "AM",
-    "PM": "PM",
-    "Block":"Block"
+  "All Chats": "All Chats",
+  "Profile": "Profile",
+  "Unread": "Unread",
+  "You do not have permissions to select the picture": "You do not have permissions to select the picture",
+  "File should be JPG/PNG/JPEG format": "File should be JPG/PNG/JPEG format",
+  "Profile Photo": "Profile Photo",
+  "Camera": "Camera",
+  "Gallery": "Gallery",
+  "Remove": "Remove",
+  "Select contact": "Select contact",
+  "Contacts on SmartChat": "Contacts on SmartChat",
+  "Invite to SmartChat": "Invite to SmartChat",
+  "Invite": "Invite",
+  "No unread chats here": "No unread chats here",
+  "View all chats": "View all chats",
+  "Do you really want to delete this account?": "Do you really want to delete this account?",
+  "Delete": "Delete",
+  "Cancel": "Cancel",
+  "Do you really want to sign out": "Do you really want to sign out",
+  "Sign Out": "Sign Out",
+  "Do you really want to clear this chat?": "Do you really want to clear this chat?",
+  "Clear chat": "Clear chat",
+  "Today": "Today",
+  "Yesterday": "Yesterday",
+  "Jan": "Jan",
+  "Feb": "Feb",
+  "Mar": "Mar",
+  "Apr": "Apr",
+  "May": "May",
+  "Jun": "Jun",
+  "Jul": "Jul",
+  "Aug": "Aug",
+  "Sep": "Sep",
+  "Oct": "Oct",
+  "Nov": "Nov",
+  "Dec": "Dec",
+  "Monday": "Monday",
+  "Tuesday": "Tuesday",
+  "Wednesday": "Wednesday",
+  "Thursday": "Thursday",
+  "Friday": "Friday",
+  "Saturday": "Saturday",
+  "Sunday": "Sunday",
+  "AM": "AM",
+  "PM": "PM",
+  "Block": "Block",
+  "Give appropriate value": "Give appropriate value",
+  "Invalid email format": "Invalid email format",
+  "Invalid Access token": "Invalid Access token",
+  "Failed to load user from storage": "Failed to load user from storage",
+  "Something went wrong!": "Something went wrong!",
+  "Permission for contacts was denied": "Permission for contacts was denied",
+  "Something went wrong while loading contacts from device. Please try again": "Something went wrong while loading contacts from device. Please try again",
+  "Add your friends to contacts and invite them to SmartChat": "Add your friends to contacts and invite them to SmartChat",
+  "Invite your contacts to SmartChat and start your conversations": "Invite your contacts to SmartChat and start your conversations",
+  "All your contacts are on SmartChat. Continue your conversations with them": "All your contacts are on SmartChat. Continue your conversations with them",
+  "Start Conversations with your closed ones": "Start Conversations with your closed ones",
+  "Invalid Access tokens": "Invalid Access tokens",
+  "Profile picture updated": "Profile picture updated",
+  "Failed to upload profile picture": "Failed to upload profile picture",
+  "Upload failed, Please try again later!": "Upload failed', Please try again later!",
+  "Successfully Removed": "Successfully Removed",
+  "Failed to delete": "Failed to delete",
+  "Failed to delete!": "Failed to delete!",
+  "Delete Account": "Delete Account",
+  "Sign out": "Sign out",
+  "Do you want to sign out?": "Do you want to sign out?",
+  "Do you really want to delete your account?": "Do you really want to delete your account?",
+  "firstName', First name is required": "'firstName', 'First name is required'",
+  "lastName', Last name is required": "'lastName', 'Last name is required'",
+  "mobileNumber, Mobile number is required": "'mobileNumber', 'Mobile number is required'",
+  "password, Password is required": "'password', 'Password is required'",
+  "confirmPassword, Passwords do not match": "'confirmPassword', 'Passwords do not match'",
+  "Let's chat on SmartChat! It's a fast, simple, and secure app we can use to message each other for free.": "Let's chat on SmartChat! It's a fast, simple, and secure app we can use to message each other for free.",
+  "Permission denied, SMS permission is required to send invites.": "Permission denied, SMS permission is required to send invites."
 }
