--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -11,16 +11,16 @@
   "Select contact": "ఫోన్ నెంబరు ఎంచుకోండి",
   "Contacts on SmartChat": "స్మార్ట్‌చాట్‌లో ఉన్న ఫ్రెండ్స్",
   "Invite to SmartChat": "స్మార్ట్‌చాట్‌కు ఆహ్వానించండి",
-  "Invite":"ఆహ్వానించు",
-  "No unread chats here":"ఇక్కడ చదవని చాట్‌లు లేవు",
-  "View all chats":"అన్ని చాట్‌లను వీక్షించండి",
-  "Do you really want to delete this account?":"మీరు నిజంగా ఈ ఖాతాను తొలగించాలనుకుంటున్నారా?",
-  "Delete":"తొలగించు",
-  "Cancel":"తీసేయాండి",
-  "Do you really want to sign out?":"మీరు నిజంగా సైన్ అవుట్ చేయాలనుకుంటున్నారా?",
-  "Sign Out":"సైన్ అవుట్ చేయండి",
-  "Do you really want to clear this chat?":"మీరు నిజంగా ఈ చాట్‌ను క్లియర్ చేయాలనుకుంటున్నారా?",
-  "Clear chat":"చాట్‌ను క్లియర్ చేయండి",
+  "Invite": "ఆహ్వానించు",
+  "No unread chats here": "ఇక్కడ చదవని చాట్‌లు లేవు",
+  "View all chats": "అన్ని చాట్‌లను వీక్షించండి",
+  "Do you really want to delete this account?": "మీరు నిజంగా ఈ ఖాతాను తొలగించాలనుకుంటున్నారా?",
+  "Delete": "తొలగించు",
+  "Cancel": "తీసేయాండి",
+  "Do you really want to sign out?": "మీరు నిజంగా సైన్ అవుట్ చేయాలనుకుంటున్నారా?",
+  "Sign Out": "సైన్ అవుట్ చేయండి",
+  "Do you really want to clear this chat?": "మీరు నిజంగా ఈ చాట్‌ను క్లియర్ చేయాలనుకుంటున్నారా?",
+  "Clear chat": "చాట్‌ను క్లియర్ చేయండి",
   "Today": "ఈ రోజు",
   "Yesterday": "నిన్న",
   "Jan": "జనవరి",
@@ -44,5 +44,34 @@
   "Sunday": "ఆదివారం",
   "AM": "పూర్వాహ్నం",
   "PM": "అపరాహ్నం",
-  "Block": "నిరోధించు"
+  "Block": "నిరోధించు",
+  "Give appropriate value": "సరైన విలువను ఇవ్వండి",
+  "Invalid email format": "చెల్లని ఇమెయిల్ ఫార్మాట్",
+  "Invalid Access token": "చెల్లని యాక్సెస్ టోకెన్",
+  "Failed to load user from storage": "స్టోరేజ్ నుండి వినియోగదారుని లోడ్ చేయడం విఫలమైంది",
+  "Something went wrong!": "ఏదో తప్పు జరిగింది!",
+  "Permission for contacts was denied": "కాంటాక్ట్స్‌కు అనుమతి నిరాకరించబడింది",
+  "Something went wrong while loading contacts from device. Please try again": "పరికరం నుండి పరిచయాలను లోడ్ చేస్తున్నప్పుడు ఏదో తప్పు జరిగింది. దయచేసి మళ్ళీ ప్రయత్నించండి.",
+  "Add your friends to contacts and invite them to SmartChat": "మీ స్నేహితులను పరిచయాలకు జోడించి, వారిని స్మార్ట్‌చాట్‌కు ఆహ్వానించండి",
+  "Invite your contacts to SmartChat and start your conversations": "మీ పరిచయాలను స్మార్ట్‌చాట్‌కు ఆహ్వానించండి మరియు మీ సంభాషణలను ప్రారంభించండి",
+  "All your contacts are on SmartChat. Continue your conversations with them": "మీ పరిచయాలన్నీ స్మార్ట్‌చాట్‌లో ఉన్నాయి. వారితో మీ సంభాషణలను కొనసాగించండి",
+  "Start Conversations with your closed ones": "మీ సన్నిహితులతో సంభాషణలు ప్రారంభించండి",
+  "Invalid Access tokens": "చెల్లని యాక్సెస్ టోకెన్లు",
+  "Profile picture updated": "ప్రొఫైల్ చిత్రం నవీకరించబడింది",
+  "Failed to upload profile picture": "ప్రొఫైల్ చిత్రాన్ని అప్‌లోడ్ చేయడంలో విఫలమైంది.",
+  "Upload failed', 'Please try again later!": "అప్‌లోడ్ విఫలమైంది', 'దయచేసి తర్వాత మళ్ళీ ప్రయత్నించండి!'",
+  "Successfully Removed": "విజయవంతంగా తీసివేయబడింది",
+  "Failed to delete": "తొలగించడంలో విఫలమైంది",
+  "Failed to delete!": "తొలగించడంలో విఫలమైంది!",
+  "Delete Account": "ఖాతాను తొలగించండి",
+  "Sign out": "సైన్ అవుట్ చేయండి",
+  "Do you want to sign out?": "మీరు సైన్ అవుట్ చేయాలనుకుంటున్నారా?",
+  "Do you really want to delete your account?": "మీరు నిజంగా మీ ఖాతాను తొలగించాలనుకుంటున్నారా?",
+  "firstName, First name is required": "మొదటి పేరు, మొదటి పేరు అవసరం",
+  "lastName, Last name is required": "lastName, Last name is required",
+  "mobileNumber, Mobile number is required": "మొబైల్ నంబర్, మొబైల్ నంబర్ అవసరం",
+  "password, Password is required": "పాస్‌వర్డ్, పాస్‌వర్డ్ అవసరం",
+  "confirmPassword, Passwords do not match": "పాస్‌వర్డ్‌ను నిర్ధారించండి, పాస్‌వర్డ్‌లు సరిపోలడం లేదు",
+  "Let's chat on SmartChat! It's a fast, simple, and secure app we can use to message each other for free.": "స్మార్ట్‌చాట్‌లో చాట్ చేద్దాం! ఇది వేగవంతమైన, సరళమైన మరియు సురక్షితమైన యాప్, మనం ఒకరికొకరు ఉచితంగా సందేశాలు పంపుకోవడానికి ఉపయోగించవచ్చు.",
+  "Permission denied, SMS permission is required to send invites.": "అనుమతి నిరాకరించబడింది, ఆహ్వానాలను పంపడానికి SMS అనుమతి అవసరం."
 }
