--- a/src/i18n/translations/telugu/home.json
+++ b/src/i18n/translations/telugu/home.json
@@ -51,7 +51,7 @@
   "Failed to load user from storage": "స్టోరేజ్ నుండి వినియోగదారుని లోడ్ చేయడం విఫలమైంది",
   "Something went wrong!": "ఏదో తప్పు జరిగింది!",
   "Permission for contacts was denied": "కాంటాక్ట్స్‌కు అనుమతి నిరాకరించబడింది",
-  "Something went wrong while loading contacts from device. Please try again": "పరికరం నుండి పరిచయాలను లోడ్ చేస్తున్నప్పుడు ఏదో తప్పు జరిగింది. దయచేసి మళ్ళీ ప్రయత్నించండి.",
+  "Something went wrong while fetching contacts details. Please try again": "పరిచయాల వివరాలను పొందడంలో ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
   "Add your friends to contacts and invite them to SmartChat": "మీ స్నేహితులను పరిచయాలకు జోడించి, వారిని స్మార్ట్‌చాట్‌కు ఆహ్వానించండి",
   "Invite your contacts to SmartChat and start your conversations": "మీ పరిచయాలను స్మార్ట్‌చాట్‌కు ఆహ్వానించండి మరియు మీ సంభాషణలను ప్రారంభించండి",
   "All your contacts are on SmartChat. Continue your conversations with them": "మీ పరిచయాలన్నీ స్మార్ట్‌చాట్‌లో ఉన్నాయి. వారితో మీ సంభాషణలను కొనసాగించండి",
