--- a/src/i18n/translations/telugu/auth.json
+++ b/src/i18n/translations/telugu/auth.json
@@ -1,24 +1,23 @@
 {
-    "First name is required": "మొదటి పేరు తప్పనిసరిగా ఇవ్వాలి",
-    "Last name is required": "చివరి పేరు తప్పనిసరిగా ఇవ్వాలి",
-    "Invalid email address": "చెల్లని ఇమెయిల్ చిరునామా",
-    "Email is required": "ఇమెయిల్ తప్పనిసరిగా అవసరం",
-    "Mobile number is required": "మొబైల్ నంబర్ తప్పనిసరిగా అవసరం",
-    "Password is required": "పాస్వర్డ్ తప్పనిసరిగా అవసరం",
-    "Passwords do not match": "పాస్వర్డ్లు సరిపోలడం లేదు",
-    "First Name": "మొదటి పేరు",
-    "Last Name": "చివరి పేరు",
-    "Email": "ఇమెయిల్",
-    "Mobile Number": "మొబైల్ నంబర్",
-    "Password": "పాస్వర్డ్",
-    "Confirm Password": "పాస్వర్డ్‌ను ధృవీకరించండి",
-    "Already have an account?": "ఇప్పటికే ఖాతా ఉందా?",
-    "Login": "లాగిన్",
-    "Don't have an account?": "ఖాతా లేదా?",
-    "Register": "రిజిస్టర్",
-    "You’ve successfully joined SmartChat!": "మీరు విజయవంతంగా స్మార్ట్‌చాట్ లో చేరారు!",
-    "Something went wrong. Please try again": "ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
-    "You’ve successfully logged in to SmartChat!": "మీరు విజయవంతంగా స్మార్ట్‌చాట్ లో లాగిన్ అయ్యారు!"
-
+  "First name is required": "మొదటి పేరు తప్పనిసరిగా ఇవ్వాలి",
+  "Last name is required": "చివరి పేరు తప్పనిసరిగా ఇవ్వాలి",
+  "Invalid email address": "చెల్లని ఇమెయిల్ చిరునామా",
+  "Email is required": "ఇమెయిల్ తప్పనిసరిగా అవసరం",
+  "Mobile number is required": "మొబైల్ నంబర్ తప్పనిసరిగా అవసరం",
+  "Password is required": "పాస్వర్డ్ తప్పనిసరిగా అవసరం",
+  "Passwords do not match": "పాస్వర్డ్లు సరిపోలడం లేదు",
+  "First Name": "మొదటి పేరు",
+  "Last Name": "చివరి పేరు",
+  "Email": "ఇమెయిల్",
+  "Mobile Number": "మొబైల్ నంబర్",
+  "Password": "పాస్వర్డ్",
+  "Confirm Password": "పాస్వర్డ్‌ను ధృవీకరించండి",
+  "Already have an account?": "ఇప్పటికే ఖాతా ఉందా?",
+  "Login": "లాగిన్",
+  "Don't have an account?": "ఖాతా లేదా?",
+  "Register": "రిజిస్టర్",
+  "You’ve successfully joined SmartChat!": "మీరు విజయవంతంగా స్మార్ట్‌చాట్ లో చేరారు!",
+  "Something went wrong. Please try again": "ఏదో తప్పు జరిగింది. దయచేసి మళ్లీ ప్రయత్నించండి.",
+  "You’ve successfully logged in to SmartChat!": "మీరు విజయవంతంగా స్మార్ట్‌చాట్ లో లాగిన్ అయ్యారు!",
+  "Invalid mobile number": "చెల్లని మొబైల్ నంబర్"
 }
-  
